alp-calculator ready for review

--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -5,24 +5,54 @@
     max-width: 375px;
     padding-top: 70px;
     padding-right: 27px;
+    padding-bottom: 20px;
     padding-left: 27px;
     position: relative;
     overflow: hidden;
+
+    @media screen and (min-width:745px) {
+        max-width: 720px;
+        background-image: url("/assets/images/stay-connected-desktop.png"); /* url("/assets/images/alp-calculator/calculator-alp-bg-desktop.png") */
+        padding-top: 104px;
+    }
+
+    .modal__close{
+        position: absolute;
+        font-family: "Barlow";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 24px;
+        top: 9px;
+        right: 13px;
+    }
 
     .red-string-1{
         position: absolute;
         border-bottom: 2px solid #CF1C0A;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         color: red;
-        width: 100vw;    
+        width: 800px;
         transform: rotate(366deg);
-        top: 49px;
+        top: 50px;
         left: -7px;
+
+        @media screen and (min-width:745px) {
+        transform: rotate(364deg);
+        top: 38px;
+        left: -7px;
+        }
     }
 
     &__title{
         width: 312px;
         margin-bottom: 2rem;
+
+        @media screen and (min-width:745px) {
+        width: 563px;
+        margin: auto;
+        margin-bottom: 20px;
+        }
     }
 
     &__strong-heading{
@@ -31,6 +61,14 @@
         font-weight: 600;
         font-size: 16px;
         line-height: 24px;
+
+        @media screen and (min-width:745px) {
+            font-size: 18px;
+            line-height: 25px;
+            text-align: center;
+            max-width: 448px;
+            margin: auto;
+        }
     }
 
     p{
@@ -39,43 +77,443 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 22px;
+
+        @media screen and (min-width:745px) {
+        font-size: 14px;
+        line-height: 18px;
+        }
     }
 
     &__text-heading{
         margin-top: 12px;
         margin-bottom: 1rem;
+
+        @media screen and (min-width:745px) {
+        text-align: center;
+        max-width: 395px;
+        margin: auto;
+        margin-top: 11px;
+        
+        }
     }
 
     &__graphic{
+        position: relative;
         width: 308px;
+
+        .graphic-top-text{
+            position: absolute;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 130%;
+            width: 178px;
+            z-index: 3;
+            left: 43px;
+            top: -3px;
+        }
+        .graphic-left-text{
+            position: absolute;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 130%;
+            transform: rotate(-91deg);
+            left: -56px;
+            top: 81px;
+        }
+
+        .graphic-desc{
+            position: absolute;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 130%;
+            width: 178px;
+            z-index: 3;
+            left: 22px;
+            bottom: 63px;
+            display: flex;
+            justify-content: center;
+            @media screen and (min-width:745px) {
+            bottom: 86px;
+            }
+        }
+
+        .alp-levels{
+            
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 130%;
+            width: 178px;
+            z-index: 3;
+            left: 22px;
+            bottom: 0;
+            margin-left: 24px;
+
+            @media screen and (min-width:745px) {
+            padding-top: 15px;
+            }
+
+            .high-alp{
+                font-family: 'Barlow';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 130%;
+                /* or 18px */
+                color: $color-black;
+            }
+            .normal-alp{
+                font-family: 'Barlow';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 130%;
+                /* or 18px */
+                color: $color-black;
+            }
+            .low-alp{
+                font-family: 'Barlow';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 130%;
+                /* or 18px */
+                color: $color-black;
+            }
+        }
+
+        .dashed-line{
+            position: absolute;
+            height: 1px;
+            width: 140px;
+            border: 1px dashed red;
+            bottom: 0;
+            left: -20px;
+        }
+
+        .graphic-cover{
+            position: absolute;
+            top: 10px;
+            left: 38px;
+            width: 142px;
+            height: 165.5px;
+        }
+        .bottom-cover{
+            position: absolute;
+            left: 40px;
+            bottom: 54px;
+            width: 142px;
+            height: 25px;
+
+            @media screen and (min-width:745px) {
+                bottom: 77px;
+            }
+        }
+
+        .bar-1{
+            background-color: #f4ebd3;
+            position: absolute;
+            top: 10px;
+            left: 38px;
+            width: 142px;
+            height: 165.5px;
+            transform: rotate(540deg)
+        }
+
+        .progress-1{
+            position: relative;
+            width: 70%;
+            height: 100%;
+            margin: auto;
+            background-color: $color-platinum;
+            animation-name: m2;
+            animation-duration: 1.5s;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease;
+        }
+
+        @keyframes m1 {
+            0%{height: 0%;}
+            100%{height: 46%;}
+        }
+        @keyframes m2 {
+            0%{height: 0%;}
+            100%{height: 87%;}
+        }
+        @keyframes m3 {
+            0%{height: 0%;}
+            100%{height: 62%;}
+        }
+        @keyframes m4 {
+            0%{height: 0%;}
+            100%{height: 80%;}
+        }
+        @keyframes m5 {
+            0%{height: 0%;}
+            100%{height: 90%;}
+        }
+        @keyframes m6 {
+            0%{height: 0%;}
+            100%{height: 59%;}
+        }
+        @keyframes m7 {
+            0%{height: 0%;}
+            100%{height: 26%;}
+        }
+        @keyframes m8 {
+            0%{height: 0%;}
+            100%{height: 22%;}
+        }
+        @keyframes f1 {
+            0%{height: 0%;}
+            100%{height: 45%;}
+        }
+        @keyframes f2 {
+            0%{height: 0%;}
+            100%{height: 87%;}
+        }
+        @keyframes f3 {
+            0%{height: 0%;}
+            100%{height: 62%;}
+        }
+        @keyframes f4 {
+            0%{height: 0%;}
+            100%{height: 78%;}
+        }
+        @keyframes f5 {
+            0%{height: 0%;}
+            100%{height: 45%;}
+        }
+        @keyframes f6 {
+            0%{height: 0%;}
+            100%{height: 22%;}
+        }
+        @keyframes f7 {
+            0%{height: 0%;}
+            100%{height: 18%;}
+        } 
+        @keyframes f8 {
+            0%{height: 0%;}
+            100%{height: 22%;}
+        }
+
+        .bar-gray{
+            position: absolute;
+            bottom: -3px;
+            transform: rotate(180deg);
+            left: 40%;
+        }
+
+        .bar-2{
+            
+            position: absolute;
+            top: 10px;
+            left: 38px;
+            width: 142px;
+            height: 165.5px;
+            transform: rotate(540deg)
+        }
+
+        .progress-2{
+            position: relative;
+            width: 70%;
+            height: 100%;
+            margin: auto;
+            background-color: $color-green;
+            /* border-bottom: 2px solid red */;
+            animation-name: m8n;
+            animation-duration: 1.5s;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease;
+        }
+
+        @keyframes m1n {
+            0%{height: 0%;}
+            100%{height: 15%;}
+        }
+        @keyframes m2n {
+            0%{height: 0%;}
+            100%{height: 23%;}
+        }
+        @keyframes m3n {
+            0%{height: 0%;}
+            100%{height: 26%;}
+        }
+        @keyframes m4n {
+            0%{height: 0%;}
+            100%{height: 23%;}
+        }
+        @keyframes m5n {
+            0%{height: 0%;}
+            100%{height: 20%;}
+        }
+        @keyframes m6n {
+            0%{height: 0%;}
+            100%{height: 13%;}
+        }
+        @keyframes m7n {
+            0%{height: 0%;}
+            100%{height: 11%;}
+        }
+        @keyframes m8n {
+            0%{height: 0%;}
+            100%{height: 11%;}
+        }
+        @keyframes f1n {
+            0%{height: 0%;}
+            100%{height: 15%;}
+        }
+        @keyframes f2n {
+            0%{height: 0%;}
+            100%{height: 23%;}
+        }
+        @keyframes f3n {
+            0%{height: 0%;}
+            100%{height: 26%;}
+        }
+        @keyframes f4n {
+            0%{height: 0%;}
+            100%{height: 24%;}
+        }
+        @keyframes f5n {
+            0%{height: 0%;}
+            100%{height: 11%;}
+        }
+        @keyframes f6n {
+            0%{height: 0%;}
+            100%{height: 11%;}
+        }
+        @keyframes f7n {
+            0%{height: 0%;}
+            100%{height: 10%;}
+        }
+        @keyframes f8n {
+            0%{height: 0%;}
+            100%{height: 11%;}
+        }
+
+        .bar-green{
+            position: absolute;
+            bottom: 0;
+            transform: rotate(180deg);
+            left: 42%;
+            color: white;
+            font-weight: bold;
+        }
+        
     }
 
     form{
         margin-top: 1rem;
-
-        .form__control-input{
+        @media screen and (min-width:745px) {
+            max-width: 300px;
             margin: auto;
-            width: 78%;
+            margin-top: 1rem;
+        
+        }
+
+        #age-input{
+            margin: auto;
+            width: 76%;
             border-bottom: 1px solid $color-envelop;
             font-weight: 500;
             font-size: 13px;
+            
+            @media screen and (min-width:745px) {
+                width: 300px;
+                font-size: 16px;
+                line-height: 26px;
+            }
+        }
+       #age-value{
+            width: 100%;
+            padding-left: 5px;
+        }
+       #sex-value{
+            width: 100%;
+            padding-left: 5px;
         }
 
-        #alp-ul{
-            margin-bottom: 0;
-
-            &::placeholder{
+        #sex-input{
+            margin: auto;
+            width: 76%;
+            border-bottom: 1px solid $color-envelop;
             font-weight: 500;
             font-size: 13px;
+            
+            @media screen and (min-width:745px) {
+                font-size: 16px;
+                line-height: 26px;
+                width: 300px;
+            }
+        }
+
+        #ul-container{
+            margin: auto;
+            width: 76%;
+            border-bottom: 1px solid $color-envelop;
+            
+            @media screen and (min-width:745px) {
+            width: 300px;
+            }
+        }
+        
+        
+        .alp-ul{
+            
+            /* width: 78%;
+            font-weight: 500;
+            font-size: 13px; */
+            margin-bottom: 0;
+            border-bottom: 1px solid transparent;
+            
+            &::placeholder{
+                font-size: 13px; 
+                font-weight: 600;
+                padding-left: 5px;
+
+                @media screen and (min-width:745px) {
+                    font-size: 16px;
+                    line-height: 26px;
+                }
             }
         }
 
         .alp-ul-disclaimer{
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 150%;
+            /* identical to box height, or 18px */
             margin: auto;
             width: 78%;
+
+            @media screen and (min-width:745px) {
+            width: unset;
+            font-size: 14px;
+            line-height: 18px;
+            margin: unset;
+            }
         }
         .ch-disclaimer{
-            display: none;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 150%;
+            /* identical to box height, or 18px */
+            @media screen and (min-width:745px) {
+                font-size: 14px;
+                line-height: 18px;
+                }
         }
 
         .button{
@@ -85,40 +523,75 @@
         }
     }
 
-    .deactive-text{
+
+    .deactive-text{    
         position: relative;
         .red-string-2{
             position: absolute;
             border-bottom: 2px solid #CF1C0A;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             color: red;
-            width: 100vw;    
-            transform: rotate(353deg);
-            left: -27%;
-            top: -58px;
+            width: 800px;
+            transform: rotate(354deg);
+            left: -9%;
+            top: -55px;
+
+            @media screen and (min-width:745px) {
+                transform: rotate(357deg);
+                top: -33px;
+            }
         }
 
         p{
             margin-top: 1.5rem;
+            @media screen and (min-width:745px) {
+                font-size: 14px;
+                line-height: 130%;
+                /* or 18px */
+                max-width: 575px;
+                margin: auto;
+                margin-top: 1.5rem;
+            }
         }
 
         .button{
             margin: auto;
-            margin-top: 10px;
+            margin-top: 15px;
+            @media screen and (min-width:745px) {
+            width: 135px;
+            }
         }
     }
     
     .active-text{
+
+        @media screen and (min-width:745px) {
+            width: 666px;
+        }
         p{
             font-family: 'Barlow';
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
             line-height: 18px;
+               
+        @media screen and (min-width:745px) {
+            font-size: 14px;
+            line-height: 18px;
+            max-width: 538px;
+            margin-left:46px;
+            margin-top: 1.5rem;
+        }
         }
 
         &__two{
             margin-top: 1.5rem;
+            
+        @media screen and (min-width:745px) {
+            max-width: 538px;
+            margin-left:46px;
+            margin-top: 1.5rem;
+        }
         }
         
         
@@ -126,10 +599,30 @@
         
         &__three{
             margin-top: 1.5rem;
+            
+        @media screen and (min-width:745px) {
+            max-width: 538px;
+            margin-left:46px; 
+            margin-top: 1.5rem;
+        }
         }
     }
 
     .survey{
+        position: relative;
+
+        .button--tertiary{
+            position: absolute;
+            top: -66px;
+            left: -37px;
+            @media screen and (min-width:745px) {
+            font-size: 21px;
+            line-height: 140%;
+            top: -98px;
+            left: -29px;
+            /* or 29px */
+            }
+        }
 
         &__title{
             width: 216px;
@@ -164,10 +657,13 @@
             border-bottom: 2px solid #CF1C0A;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             color: red;
-            width: 100vw;    
+            width: 800px;    
             transform: rotate(355deg);
-            left: -27%;
+            left: -9%;
             bottom: -39px;
+            @media screen and (min-width:745px) {
+            left: -91%;
+            }
         }
 
         &__text{
@@ -175,6 +671,12 @@
             font-size: 14px;
             line-height: 18px;
             margin-bottom: 1.5rem;
+            @media screen and (min-width:745px) {
+                font-size: 14px;
+                line-height: 18px;
+                max-width: 538px;
+                margin: auto;
+            }
         }
     }
 
@@ -184,10 +686,14 @@
         margin-top: 3rem;
         
         .references{
-        max-height: 696px;
+        max-height: 464px;
+        margin-bottom: 0;
         overflow: auto;
         overflow-x: hidden;
-        margin-bottom: 20px;
+
+        @media screen and (min-width:745px) {
+        margin-bottom: 5rem;
+        }
         }
 
         p, a{
@@ -203,5 +709,11 @@
             max-width: unset;
         }
     }
+
+    /* .comparisson-block{
+        @media screen and (min-width:745px) {
+            display: flex;
+        }       
+    } */
 
 }
