🐛 Fix underlined text

--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -87,7 +87,7 @@ const internalNavLinks = [
                                     class="lg:color--red lg:bold"
                                     >2 or more low ALP (alkaline phosphatase)
                                     levels</span
-                                > in the presence of clinical signs and symptoms<sup
+                                > in the presence of<br class="hidden sm:block sz-463:hidden"> <span class="underline-text">clinical signs</span> and symptoms<sup
                                     >1,2*</sup
                                 >
                             </p>
