--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -517,7 +517,9 @@ const internalNavLinks = [
                         </p>
                         <ul class="test__limitations-list">
                             <li class="font--special-elite">
-                                restrictive costs/ affordability<sup>8,10,12,13,15</sup>
+                                restrictive costs/ affordability<sup
+                                    >8,10,12,13,15</sup
+                                >
                             </li>
                             <li class="font--special-elite">
                                 diagnostic services only available at certain
@@ -548,8 +550,10 @@ const internalNavLinks = [
                 </h2>
                 <p class="mb-1 md:text--center genetic-testing-role__paragraph">
                     <span class="color--saffron-mango">
-                        Genetic testing rules in hypophosphatasia; it does not
-                        rule it out<sup>17,18</sup>
+                        Genetic testing rules in hypophosphatasia;<br
+                            class="hidden xs:block"
+                        /> it does <strong>not</strong>
+                        rule it out<sup>16,17</sup>
                     </span>
                 </p>
                 <p
@@ -557,7 +561,7 @@ const internalNavLinks = [
                 >
                     Insurance requirements and/or coverage for genetic testing
                     vary by state and insurance provider. Verify with the
-                    patient’s insurer to understand which type of services will
+                    patient's insurer to understand which type of services will
                     be covered.
                 </p>
                 <p
@@ -565,7 +569,8 @@ const internalNavLinks = [
                 >
                     While genetic testing for hypophosphatasia can be a useful
                     tool, it remains an evolving science with certain
-                    limitations and challenges.
+                    limitations that can make it challenging to rely upon for an
+                    accurate diagnosis.
                 </p>
             </div>
             <div class="line-container first">
