--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -129,6 +129,12 @@ $color-value in $colors {
     }
 }
 
+.xs\:block {
+    @media screen and (min-width: 375px) {
+        display: block !important;
+    }
+}
+
 .sm\:block {
     @media screen and (min-width: 425px) {
         display: block !important;
